Adds support for items choices attributes

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -278,7 +278,7 @@ arb:
       edit: "تعديل الحدث"
       index: "الاحداث"
       new: "اضافة حدث"
-      # show: "Evènement\_: %{name}"
+      # show: "Évènement\_: %{name}"
     backend/finances:  #?
       unvalidated_deposits: "التأكد من اقتطاعات البنك" #?
     backend/financial_years:
