--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -259,6 +259,7 @@ fra:
         madam: "Madame"
         person: "Personne"
         professor: "Professeur"
+        public_establishment: "Établissement public"
         public_interest_group: "Groupement d’intérêt public"
         sir: "Monsieur"
         syndicate: "Syndicat"
@@ -466,6 +467,7 @@ fra:
         madam: "Madame"
         person: "Personne"
         professor: "Professeur"
+        public_establishment: "Établissement public"
         public_interest_group: "Groupement d’intérêt public"
         sir: "Monsieur"
         syndicate: "Syndicat"
@@ -713,6 +715,7 @@ fra:
         madam: "Madame"
         person: "Personne"
         professor: "Professeur"
+        public_establishment: "Établissement public"
         public_interest_group: "Groupement d’intérêt public"
         sir: "Monsieur"
         syndicate: "Syndicat"
