--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -224,9 +224,9 @@ jpn:
     backend/event_participations: #?
     backend/events:
       # edit: "Modifier l'évènement\_: %{name}"
-      # index: "Evènements"
+      # index: "Évènements"
       # new: "Nouvel évènement"
-      # show: "Evènement\_: %{name}"
+      # show: "Évènement\_: %{name}"
     backend/financial_years:
       # close: "Clôturer l’exercice %{code}"
       # compute_balances: "Calculer la balance de l’exercice"
@@ -975,7 +975,7 @@ jpn:
     # estimate: "Devis"
     # estimate_to_order: "Passer le devis en commande"
     # europe_out_export: "Exportations hors CE"
-    # events: "Evènements"
+    # events: "Évènements"
     # example: "Exemple\_: %{value}"
     # exchange_rate_from_x_to_y: "Taux de change de %{x} à %{y}"
     # executed: "Réalisé"
