add procedures and clean nomenclature

--- a/config/locales/fra/procedures.yml
+++ b/config/locales/fra/procedures.yml
@@ -31,6 +31,8 @@ fra:
     calving_one: "Vêlage unique"
     calving_twin: "Vêlage jumeaux"
     chemical_treatment: "Traitement chimique"
+    direct_silage: "Ensilage direct"
+    indirect_silage: "Ensilage indirect"
     grains_harvest: "Moisson"
     mineral_fertilizing: "Fertilisation minérale"
     organic_fertilizing: "Fertilisation organique"
@@ -44,28 +46,40 @@ fra:
     superficial_plowing: "Hersage"
     wheat_crop: "Culture de blé (standard)"
   variables:
+    caregiver: "Soigneur"
+    child: "Nouveau né"
     cropper: "Moissonneuse batteuse"
     cropper_driver: "Conducteur de moissonneuse batteuse"
     culture: "Culture"
     driver: "Conducteur"
+    first_child: "Premier nouveau né"
+    second_child: "Second nouveau né"
     fertilizer: "Engrais"
     fertilizer_to_spread: "Engrais à épandre"
+    forager: "Ensileuse"
+    forager_driver: "Conducteur d'ensileuse"
     grains: "Grains"
     grinder: "Broyeur"
     harrow: "Herse"
     land_parcel: "Parcelle"
     manure: "Fumier"
     manure_to_spread: "Fumier à épandre"
+    milk: "Lait"
+    mower_driver: "Conducteur de faucheuse"
+    mower: "Faucheuse"
     molecule: "Molécule"
+    molecule_to_give: "Molécule à donner"
     mother_animal: "Mère"
     plant: "Plantes, Culture"
     plow: "Charrue"
     seeder: "Semoir"
     seeds: "Semences"
     seeds_to_sow: "Semence à semer"
+    silage: "Ensilage"
     silo: "Silo"
     sower: "Semoir"
     spreader: "Épandeur"
-    straw: "Paille"
+    straw: "Fourrage"
+    straws: "Paille"
     tractor: "Tracteur"
     trailer: "Remorque"
