--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1142,11 +1142,12 @@ fra:
         # cultipacking: "Cultipacking"                     # tillage
         # grinding: "Grinding"
         # growth_control: "Growth control"
-        # harvest: "Harvest"
+        harvest: "Récolte"
+        haymaking: "Fenaison"
         # hoeing: "Hoeing"                                 # tillage
         oviparous_birth: "Reproduction (ovipare)"
         # plant_fertilisation: "Plant fertilisation"
-        # plant_illness_treatment: "Plant illness treatment"
+        plant_illness_treatment: "Traitements phytosanitaires"
         # plowing: "Plowing"                               # tillage
         # pruning: "Pruning"
         # raking: "Raking"                                 # tillage
