Normalizes ProductLinkage and ProductMembership. Generalizes use of TimeLineable.

--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -506,6 +506,7 @@ eng:
       product_group: "Animal group"
       # product_indicator_datum: "Valeur d’indicateur"
       # product_link: "Lien entre produits"
+      # product_linkage: "Lien entre produits"
       # product_localization: "Passage d’un produit en un lieu"
       # product_membership: "Passage d’un produit dans un groupe"
       product_move: "Stock move"
@@ -871,6 +872,7 @@ eng:
     employees: "Employees"
     employment: "Employment"
     encrypted_password: "Encrypted password"
+    # enjoyments: "Enjoyments"
     entities: "People"
     entity: "Entity"
     entity_1: "Person 1"
@@ -1024,6 +1026,8 @@ eng:
     letter_format: "Letter format"
     # lft: "Limite gauche"
     lines: "Lines" #?
+    # linkages: "Linkages"
+    # links: "Links"
     listing: "Listing"
     listing_node_items: "Listing node items"
     listing_nodes: "Listing nodes"
@@ -1191,6 +1195,7 @@ eng:
     planned_at: "Planned at"
     planned_depreciations: "Planned depreciations"
     planned_on: "Planned on"
+    # point: "Point"
     # point_value: "Point value"
     # population: "Population"
     # population_counting: "Gestion quantitative"
