--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -406,6 +406,7 @@ jpn:
       # product_group: "Groupe de produit"
       # product_indicator_datum: "Valeur d’indicateur"
       # product_link: "Lien entre produits"
+      # product_linkage: "Lien entre produits"
       # product_localization: "Passage d’un produit en un lieu"
       # product_membership: "Passage d’un produit dans un groupe"
       # product_move: "Mouvement de stock"
@@ -670,6 +671,7 @@ jpn:
     # employees: "employés"
     # employment: "Emploi/Rôle"
     # encrypted_password: "Mot de passe crypté"
+    # enjoyments: "Enjoyments"
     # entities: "Personnes"
     # entity: "Personne"
     # entity_1: "Personne 1"
@@ -776,6 +778,8 @@ jpn:
     # letter: "Lettre"
     # letter_format: "Devis au format lettre"
     # lft: "Limite gauche"
+    # linkages: "Linkages"
+    # links: "Links"
     # listing: "Extraction"
     # listing_node_items: "Éléments de nœud d’extraction"
     # listing_nodes: "Nœuds d’extraction"
@@ -924,6 +928,7 @@ jpn:
     # planned_at: "Prévu à"
     # planned_depreciations: "Amortissements prévus"
     # planned_on: "Prévu le"
+    # point: "Point"
     # point_value: "Point value"
     # population: "Population"
     # population_counting: "Gestion quantitative"
