--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -4,16 +4,22 @@ jpn:
     abilities:
       attributes: #?
       items:
+        # bunch: "Boteller"
+        # care: "Soigner"
         # catch: "Atteler"
+        # clean: "Nettoyer"
         # consume: "Consommer"
         # drive: "Conduire"
         # feed: "Nourrir"
         # fertilize: "Fertiliser"
         # germinate: "Germer"
+        # grind: "Broyer"
         # harvest: "Récolter"
         # kill: "Tuer"
+        # manage: "Gérer"
         # milk: "Traire"
         # move: "Se déplacer"
+        # mow: "Faucher"
         # plow: "Labourer"
         # produce: "Produire"
         # sow: "Semer"
@@ -236,6 +242,7 @@ jpn:
         # vegetal_crops: "Production végétale"
     charts_of_accounts:
       items: #?
+      # name: "Plan de comptes"
     countries:
       attributes: #?
       items:
@@ -486,8 +493,10 @@ jpn:
         za: "南アフリカ"
         zm: "ザンビア"
         zw: "ジンバブエ"
+      # name: "Pays"
     currencies:
-      attributes: #?
+      attributes:
+        # active: "Active"
       item_lists:
         AED: #?
         AFN: #?
@@ -844,24 +853,51 @@ jpn:
         ZMK: "ザンビア・クワチャ"
         ZWD: "ジンバブエ・ドル" #?
         # ZWL: "Dollar zimbabwéen"
+      # name: "Monnaies"
     dimensions:
-      attributes: #?
-      items: #?
+      attributes:
+        # expression: "Expression"
+      items:
+        # concentration: "Concentration"
+        # electric_current: "Intensité"
+        # length: "Longueur"
+        # none: "Aucune"
+        # power: "Puissance"
+        # temperature: "Temperature"
+        # time: "Temps"
+        # volume: "Volume"
+        # weight: "Masse"
+      # name: "Dimensions"
     document_categories:
       attributes: #?
       items:
         # accountancy: "Comptabilité"
         # animal_farming: "Elevage"
+        # exploitation: "Exploitation"
+        # feeding: "Alimentation animale"
         # health: "Santé - Hygiène"
+        # identification: "Identification animale"
         # land_parcel_management: "Conduite de la parcelle"
         # management: "Gestion"
+        # marketing: "Commercial - Marketing"
+        # production: "Production"
+        # reproduction: "Reproduction"
+        # stock_management: "Stocks"
+        # transformation: "Transformation"
+        # vegetal_crops: "Cultures"
+        # vinification: "Vinification"
+      # name: "Categories de documents"
     document_natures:
-      attributes: #?
+      attributes:
+        # category: "Categories"
       items:
         # activity_cost: "Coût de production par activité et intervention"
         # animal_husbandry_registry: "Registre d'élevage"
+        # animal_list: "Liste des animaux"
+        # animal_sheet: "Fiche animal"
         # balance_sheet: "Bilan comptable"
         # deposit: "Remise en banque"
+        # entity_sheet: "Fiche Tiers"
         # general_journal: "Journal général"
         # general_ledger: "Grand livre"
         # income_statement: "Compte de résultat"
@@ -869,6 +905,7 @@ jpn:
         # journal: "Journal"
         # manure_management_plan: "Plan de fumure"
         # phytosanitary_registry: "Registre phytosanitaire"
+        # prescription: "Prescription vétérinaire"
         # profit_and_loss_statement: "Compte de résultat"
         # purchase_order: "Achat"
         # sales_estimate: "Devis de vente"
@@ -876,6 +913,7 @@ jpn:
         # sales_order: "Commande de vente"
         # stocks: "Stocks"
         # veterinary_booklet: "Carnet vétérinaire"
+      # name: "Nature de document"
     entity_link_natures:
       attributes: #?
       choices: #?
@@ -902,10 +940,13 @@ jpn:
         # sir: "Monsieur"
         # syndicate: "Syndicat"
     incidents:
-      attributes: #?
+      attributes:
+        # target: "Cible"
+        # treatments: "Traitements"
       items:
         # incident: "Incident"
         # pathology: "Pathologie"
+      # name: "Incidents"
     indicators:
       attributes: #?
       choices:
@@ -1125,7 +1166,10 @@ jpn:
         # animal_feeding: "Alimentation des animaux"
         # animal_illness_treatment: "Traitement des maladies animales"
         # animal_production: "Productions animales"
+        # harvest: "Récolte"
+        # haymaking: "Fenaison"
         # oviparous_birth: "Reproduction (ovipare)"
+        # plant_illness_treatment: "Traitements phytosanitaires"
         # soil_enrichment: "Amendement"
         # tillage: "Travail du sol"
         # viviparous_birth: "Reproduction (vivipare)"
