--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -473,6 +473,7 @@ fra:
     canal: "Canal"
     # carried: "Carried"
     # carrier: "Carrier"
+    carrier_linkages: "Carrier linkages"
     cash: "Trésorerie"
     cash_journals: "Journaux de caisse" #?
     cash_transfers: "Virements internes" #?
@@ -869,6 +870,8 @@ fra:
     # origin_object: "Origin object"
     origin_type: "Type de l’origine"
     original_name: "Nom original" #?
+    originator: "Originator"
+    originator_type: "Originator type"
     outgoing_deliveries: "Livraisons sortantes"
     outgoing_delivery_items: "Lignes de livraisons sortantes"
     outgoing_delivery_modes: "Modes de livraisons sortantes" #?
@@ -945,18 +948,18 @@ fra:
     producer: "Producteur"
     product: "Produit"
     product_account: "Compte de produit"
-    # product_births: "Product births"
-    # product_deaths: "Product deaths"
-    # product_enjoyments: "Product enjoyments"
+    product_births: "Product births"
+    product_deaths: "Product deaths"
+    product_enjoyments: "Product enjoyments"
     product_events: "Product events"
-    # product_linkages: "Product linkages"
+    product_linkages: "Product linkages"
     product_localizations: "Product localizations"
-    # product_measurements: "Product measurements"
-    # product_memberships: "Product memberships"
+    product_measurements: "Product measurements"
+    product_memberships: "Product memberships"
     product_moves: "Product moves"
     product_nature: "Product nature"
     # product_nature_categories: "Product nature categories"
-    # product_ownerships: "Product ownerships"
+    product_ownerships: "Product ownerships"
     production: "Production"
     # production_support: "Production support"
     productions: "Productions"
