--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -510,6 +510,7 @@ jpn:
     # by_default: "Par défaut"
     # campaign: "Campagne"
     # canal: "Canal"
+    # carrier_linkages: "Carrier linkages"
     # cash: "Trésorerie"
     # cash_journals: "Journaux de caisse"
     # cash_transfers: "Virements internes"
@@ -879,6 +880,8 @@ jpn:
     # origin: "Origine"
     # origin_type: "Type de l’origine"
     # original_name: "Nom original"
+    # originator: "Originator"
+    # originator_type: "Originator type"
     # outgoing_deliveries: "Livraisons sortantes"
     # outgoing_delivery_items: "Lignes de livraisons sortantes"
     # outgoing_delivery_modes: "Modes de livraisons sortantes"
@@ -949,10 +952,17 @@ jpn:
     # producer: "Producteur"
     # product: "Produit"
     # product_account: "Compte de produit"
+    # product_births: "Product births"
+    # product_deaths: "Product deaths"
+    # product_enjoyments: "Product enjoyments"
     # product_events: "Product events"
+    # product_linkages: "Product linkages"
     # product_localizations: "Product localizations"
+    # product_measurements: "Product measurements"
+    # product_memberships: "Product memberships"
     # product_moves: "Product moves"
     # product_nature: "Product nature"
+    # product_ownerships: "Product ownerships"
     # production: "Production"
     # productions: "Productions"
     # products: "Produits"
