--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -291,13 +291,29 @@ eng:
       name: "Name"
     activity_families:
       items:
-        # animal_farming: "Élevage"
+        # accountancy: "Comptabilité"
+        # animal_farming: "Élevage bovins"
+        # cattle_farming: "Elevage"
         # exploitation: "Exploitation"
+        # fallow_land: "Jachère"
+        # fish_farming: "Aquaculture"
+        # goat_farming: "Élevage caprins"
         # handicraft: "Artisanat"
+        # maize_crops: "Culture de maïs"
+        # pig_farming: "Élevage porcins"
+        # potato_crops: "Culture de pomme de terre"
+        # prairie: "Prairie"
+        # purchases: "Achats"
+        # sales: "Ventes"
         # service: "Service"
+        # sheep_farming: "Élevage ovins"
+        # stocks: "Stocks"
         # vegetal_crops: "Production végétale"
+      # name: "Familles d'activité"
     charts_of_accounts:
-      items: #?
+      items:
+        # fr_pcg82: "Plan comptable pcg82"
+        # fr_pcga: "Plan comptable agricole pcga"
       # name: "Plan de comptes"
     countries:
       attributes: #?
@@ -985,18 +1001,30 @@ eng:
         public_interest_group: "Public interest group"
         sir: "Sir"
         syndicate: "Syndicate"
+      # name: "Type de tiers"
     incidents:
       attributes:
         # target: "Cible"
         # treatments: "Traitements"
       items:
+        # accident: "Accident"
+        # climate_incident: "Incident climatique"
+        # diarrhea: "Diarrhée"
+        # fecondity_problem: "Problème de fécondité"
         # incident: "Incident"
+        # mammite: "Mammite"
+        # other: "Autre"
         # pathology: "Pathologie"
+        # respiratory_problem: "Problèmes respiratoires"
       # name: "Incidents"
     indicators:
-      attributes:  #?
+      attributes:
         choice: "Choice" #?
+        # choices: "Choix"
+        # datatype: "Datatype"
+        # interpolation: "Interpolation"
         type: "Type" #?
+        # unit: "Unité"
       choices:
         choices:  #?
           aging: "Aging" #?
